# ambdes

./: .gitignore  .nojekyll  LICENSE  README.md  code.html  conceptual.html  criteria.html  environment.yaml  index.html  literature.html  pyproject.toml  pytest.ini  qa.html  robots.txt  search.json  sitemap.xml  validation.html  verification.html  vv.html
.github/workflows/: lint_alt_text.yml  quarto_publish.yml
checklists/: hsma_model_readiness.html  nhs_levels_of_rap.html  pyopensci.html  stars_reproducibility.html  stars_reuse.html  stressdes.html  vv.html
data/: AmbSYS-to-Mar-2026-UI7FG.csv
docs/: _quarto.yml  code.qmd  conceptual.qmd  criteria.qmd  index.qmd  literature.qmd  qa.qmd  references.bib  validation.qmd  verification.qmd  vv.qmd
docs/checklists/: hsma_model_readiness.md  nhs_levels_of_rap.md  pyopensci.md  stars_reproducibility.md  stars_reuse.md  stressdes.md  vv.md
docs/css/: styles.css  theme.scss
docs/images/: stage1.drawio  stage2.drawio  stage3.drawio  stage4.drawio  stage5.drawio  stage6.drawio
docs/run/stage1/: baseline.ipynb
docs/scripts/: callout-toggle.html
geographic/: index.html
nongeographic/: animation.html  code.html  conceptual.html  design.html  examples.html  index.html  qa.html  run.html  vv.html
site_libs/bootstrap/: bootstrap-1e10d9106ee83674043745959f1925f6.min.css  bootstrap-b96bdf302c464d955e2119450bfab289.min.css
spec/: index.html
src/ambdes/: __init__.py  ambsys.py  config.py  logging.py  model.py  patient.py
tests/: test_ambsys.py  test_logging.py
